* dataset crime now has variable offense as a factor, month and day as ordered factors.
* several functions now message the user with the URL queried as well as the Google Maps Terms of Service URL to better agree with Google's License Restrictions.


DOCUMENTATION CHANGES

* documentation for get_map states that whole-world zooms are not supported. (thanks to suggestion by john hendy.)



ggmap 2.2
-------------------------------------------------------------------------

This version brings ggmap up to date with ggplot2 0.9.2.

CHANGES

* geocode now returns the query as well with the option output = "more".  this allows for easier merging with original datasets.  (thanks to suggestion by garrett grolemund.)
* geocode, mapdist, route and revgeocode now no longer close all connections. consequently, ggmap now works with knitr. (thanks to fix by yihui xie.)





ggmap 2.1
-------------------------------------------------------------------------

NEW FEATURES

* get_map now allows for bounding box specifications with source = 'google'.
* new argument darken added to ggmap which allows the user to put a shaded layer on top of maps.  this makes seeing color overlays easier.
* darken, mapcolor arguments added to qmplot.

CHANGES

* get_[google,osm,stamen,cloudmade] functions now check their arguments in the function themselves as opposed to using an alternative function for argument checking.
* ggmap arguments changed 
	a. fullpage and expand collapsed into one argument called extent
	b. b changed to padding.  using b now issues a warning. 
thanks to Jean-Olivier Irisson for the suggestions.
* deprecated syntaxes now properly call .Deprecated
* ggmap documentation greatly enhanced.
* get_stamenmap and get_cloudmademap now message the user if more than 20 tiles are needed.

FIXES

* get_map now attempts to determine an appropriate zoom when a bounding box is provided.