@@ -2,7 +2,7 @@ Package: ggmap
 Type: Package
 Title: A package for spatial visualization with Google Maps and OpenStreetMap
 Version: 2.3
-Date: 2013-02-01
+Date: 2013-03-09
 Author: David Kahle <david.kahle@gmail.com>, Hadley Wickham
     <h.wickham@gmail.com>
 Maintainer: David Kahle <david.kahle@gmail.com>
